--- a/python tutorial/10. lists/examples.ipynb
+++ b/python tutorial/10. lists/examples.ipynb
@@ -183,6 +183,50 @@
    "source": [
     "minha_lista.sort()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "thislist = [\"apple\", \"banana\", \"cherry\"]\n",
+    "thislist.insert(1, \"orange\")\n",
+    "print(thislist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "thislist = [\"apple\", \"banana\", \"cherry\"]\n",
+    "del thislist[0]\n",
+    "print(thislist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "thislist = [\"apple\", \"banana\", \"cherry\"]\n",
+    "thislist.pop()\n",
+    "print(thislist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "thislist = [\"apple\", \"banana\", \"cherry\", \"banana\", \"kiwi\"]\n",
+    "thislist.remove(\"banana\")\n",
+    "print(thislist)"
+   ]
   }
  ],
  "metadata": {
